Verison 1 of Quiz Need to Change next button location
9/12/18

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,4 +9,5 @@
     <string name="correct_toast">Correct</string>
     <string name="incorrect_toast">Incorrect</string>
     <string name="next_button">Next</string>
+    <string name="prv_button">Previous</string>
 </resources>
