--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,9 +1,10 @@
 <resources>
     <string name="app_name">MyQuiz</string>
     <string name="question_australia">Canberra is the captital of Australia</string>
-    <string name="question_batman">Is Bruce Wayne Batman?</string>
-    <string name="question_spiderman">Is Peter Parker Spiderman?</string>
-    <string name="question_war">Did we win World War I?</string>
+    <string name="question_batman">Bruce Wayne is Batman</string>
+    <string name="question_spiderman">Peter Parker is Spiderman?</string>
+    <string name="question_war">The US lost World War I</string>
+    <string name="question_pokemon">Raichu is the first form of Pikachu?</string>
     <string name="True_Button">True</string>
     <string name="False_Button">False</string>
     <string name="correct_toast">Correct</string>
